# CudaFE

./: CMakeLists.txt  Makefile  README.md
MergeKernel/: CMakeLists.txt  IDMap.h  mergeKernel.cpp
NoelleDOALL/: CMakeLists.txt  DOALL.cpp
NoelleReduction/: CMakeLists.txt  Parallelizer.hpp  Reduction.cpp
